# subscriptions

./: .gitignore  .prettierignore  .vercelignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  codama-visitors.mjs  codama.js  eslint.config.mjs  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  txtx.yml
.github/: dependabot.yml
.github/actions/setup/: action.yml
.github/workflows/: benchmark.yml  build.yml  ci.yml  format.yml  idl-check.yml  lint.yml  publish-rust.yml  publish-typescript.yml  release.yml  security.yml  test.yml
apps/web/: next.config.ts  package.json  tsconfig.tsbuildinfo
apps/web/e2e/: subscriptions-ui.spec.ts
audits/: AUDIT_STATUS.md
clients/rust/: CHANGELOG.md  Cargo.toml
clients/rust/src/: lib.rs
clients/typescript/: CHANGELOG.md  README.md  package.json  typedoc.json  vitest.config.ts  vitest.offline.config.ts
clients/typescript/src/: client.ts  constants.ts  index.ts  pdas.ts  plugin.ts  transfer-hook.ts  validators.ts
clients/typescript/test/: collect-utils.test.ts  delegation-fixed-lifecycle.test.ts  delegation-recurring-lifecycle.test.ts  delegation-security.test.ts  event-account-defaults.test.ts  multi-wallet-scenarios.test.ts  query.test.ts  setup.ts  subscription-lifecycle.test.ts  subscription-security.test.ts  transfer-hook-lifecycle.test.ts  validators.test.ts  webapp-collect-utils.test.ts
docs/: 001-program-architecture.md  002-subscriptions-architecture.md  003-versioning-migration-architecture.md  004-program-upgrade-mechanism.md  package.json  tsconfig.json
docs/app/: layout.tsx  page.tsx
docs/app/docs/: layout.tsx
docs/components/: contributors.tsx  mdx.tsx  mermaid.tsx
docs/content/docs/: index.mdx  meta.json  program.mdx  webapp.mdx
docs/guide-verifiers/rust/: Cargo.toml
docs/guide-verifiers/rust/src/: main.rs
docs/guide-verifiers/typescript/: test-guides-devnet.ts
docs/lib/: layout.shared.tsx
idl/: subscriptions.json
program/: Cargo.toml  build.rs
program/src/: constants.rs  entrypoint.rs  errors.rs  event_engine.rs  lib.rs
program/src/events/: fixed_transfer.rs  mod.rs  plan_updated.rs  recurring_transfer.rs  subscription_cancelled.rs  subscription_created.rs  subscription_resumed.rs  subscription_transfer.rs  up_to_transfer.rs
program/src/instructions/: cancel_subscription.rs  cancel_subscription_now.rs  close_subscription_authority.rs  create_fixed_delegation.rs  create_plan.rs  create_recurring_delegation.rs  create_up_to_delegation.rs  delete_plan.rs  initialize_subscription_authority.rs  mod.rs  resume_subscription.rs  revoke_abandoned_delegation.rs  revoke_abandoned_subscription.rs  revoke_delegation.rs  revoke_subscription_authority.rs  subscribe.rs  transfer_fixed_delegation.rs  transfer_recurring_delegation.rs  transfer_subscription.rs  transfer_up_to.rs  update_plan.rs
program/src/instructions/helpers/: authority.rs  delegation.rs  introspection.rs  mod.rs  plan.rs  program.rs  system.rs  token.rs  traits.rs  transfer_hook_util.rs  transfer_utils.rs  transfer_validation.rs
program/src/state/: common.rs  fixed_delegation.rs  header.rs  mod.rs  plan.rs  recurring_delegation.rs  subscription_authority.rs  subscription_delegation.rs  up_to_delegation.rs
program/src/state/versioning/: core.rs  mod.rs  v1_to_v2.rs
program/src/tests/: asserts.rs  events.rs  idl.rs  mod.rs  utils.rs
programs/subscriptions/: Cargo.toml
programs/subscriptions/idl/: subscriptions.json
programs/subscriptions/src/: event_engine.rs  lib.rs
runbooks/: README.md
runbooks/deployment/: main.tx
runbooks/surfnet-setup/: main.tx
scripts/: common.sh  event-account-fixups.ts  generate-clients.ts  generate-ts-client.ts  start-webapp.sh
scripts/lib/: utils.ts
tests/integration-tests/: Cargo.toml  cu_baseline.md
tests/integration-tests/src/: lib.rs  test_cancel_subscription.rs  test_cancel_subscription_now.rs  test_close_subscription_authority.rs  test_co_init_introspection.rs  test_co_init_slot.rs  test_create_fixed_delegation.rs  test_create_plan.rs  test_create_recurring_delegation.rs  test_create_up_to_delegation.rs  test_delete_plan.rs  test_initialize_subscription_authority.rs  test_resume_subscription.rs  test_revoke_abandoned_delegation.rs  test_revoke_abandoned_subscription.rs  test_revoke_delegation.rs  test_revoke_subscription_authority.rs  test_subscribe.rs  test_transfer_fixed_delegation.rs  test_transfer_recurring_delegation.rs  test_transfer_subscription.rs  test_transfer_up_to.rs  test_update_plan.rs
tests/integration-tests/src/utils/: asserts.rs  constants.rs  cu_tracker.rs  idl.rs  pda.rs  test_helpers.rs
tests/transfer-hook-example/: Cargo.toml
tests/transfer-hook-example/src/: lib.rs
webapp/: README.md  index.html  package.json  tsconfig.app.json  vercel.json  vite.config.ts
webapp/api/: package.json  server.ts
webapp/api/lib/: bpf-loader.ts  deploy-builder.ts  program-status.ts
webapp/scripts/: helpers.ts  init-test-environment.ts  mint-usdc.ts  package.json
webapp/src/: App.tsx  index.css
webapp/src/components/: app-footer.tsx  app-header.tsx  app-layout.tsx  app-modal.tsx  app-providers.tsx  app-sidebar.tsx  nav-items.ts  theme-provider.tsx
webapp/src/config/: networks.ts
webapp/src/hooks/: use-cluster-config.ts  use-create-token.ts  use-delegations.ts  use-features.ts  use-plan-subscribers.ts  use-plans.ts  use-program-deploy.ts  use-program-status.ts  use-rpc.ts  use-setup-wizard.ts  use-subscription-authority-status.ts  use-subscriptions-mutations.ts  use-subscriptions.ts  use-token-config.ts
webapp/src/lib/: api-client.ts  bpf-loader-browser.ts  client.ts  cluster.ts  collect-all-results.ts  collect-utils.ts  collection-history.ts  custom-rpc.ts  delegation-approval-state.ts  delegation-filters.ts  delegation-kinds.ts  format.ts  parse-program-error.ts  plan-constants.ts  plan-subscriber-authority.ts  token-display.ts  tx-packer.ts  (+1 more)
webapp/test/: collect-all-results.test.ts  collection-history.test.ts  delegation-approval-state.test.ts  delegation-filters.test.ts  plan-subscriber-authority.test.ts  token-display.test.ts
(+133 files in other folders)
