[package]
name = "subscriptions"
version = "0.1.2"
edition = "2021"
description = "Rust client for the Subscriptions Solana program"
license = { workspace = true }
repository = { workspace = true }
readme = "../../README.md"
include = ["Cargo.toml", "../../README.md", "src/**/*.rs"]

[lints]
workspace = true

[dependencies]
borsh = { version = "1.6", features = ["derive"] }
thiserror = "1.0"
num-derive = "0.4"
num-traits = "0.2"

solana-pubkey = { version = "^4", features = ["borsh", "curve25519"] }
solana-instruction = { version = "^3", features = ["borsh"] }
solana-account-info = "^3"
solana-program-error = "^3"
solana-cpi = "^3"

# Serde support
serde = { version = "1.0", features = ["derive"], optional = true }
serde_with = { version = "3.20", optional = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_with"]
fetch = []
anchor = []
anchor-idl-build = []
