[package]
name = "subscriptions"
version = "0.4.1"
edition = "2021"
description = "Rust client for the Subscriptions Solana program"
license = { workspace = true }
repository = { workspace = true }
readme = "../../README.md"
include = ["Cargo.toml", "../../README.md", "src/**/*.rs"]

[lints]
workspace = true

[dependencies]
borsh = { version = "1.6", features = ["derive"] }
thiserror = "2.0"
num-derive = "0.4"
num-traits = "0.2"

solana-account = { version = "~3.4", optional = true }
solana-account-info = "~3.1"
solana-address = { version = "2.6.0", features = ["borsh", "copy", "curve25519", "decode"] }
solana-cpi = "~3.1"
solana-instruction = { version = "~3.4", features = ["borsh"] }
solana-program-error = "~3.0"
solana-rpc-client = { version = "3.1.8", optional = true }

# Serde support
serde = { version = "1.0", features = ["derive"], optional = true }
serde_with = { version = "3.20", optional = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_with"]
fetch = ["dep:solana-account", "dep:solana-rpc-client"]
