[package]
name = "tests-subscriptions"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
subscriptions = { package = "subscriptions-program", path = "../../program", features = ["no-entrypoint"] }
pinocchio = { workspace = true }
pinocchio-associated-token-account = { workspace = true }
pinocchio-system = { workspace = true }
pinocchio-token = { workspace = true }
pinocchio-token-2022 = { workspace = true }
litesvm = "^0.7"
litesvm-token = { version = "^0.7", features = ["token-2022"] }
solana-account = "^2"
solana-instruction = "^3"
solana-keypair = "^2"
solana-message = "^2"
solana-pubkey = "^2"
solana-signer = "^2"
solana-transaction = "^2"
solana-transaction-error = "^2"
spl-associated-token-account = "7.0.0"
spl-token-2022 = "^8"
spl-token = "^8"
serde_json = { workspace = true }
rstest = "0.26"
tabled = "0.20"
ctor = "0.2"
